--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     Birinchi darsda qatnashmoqchimisiz? 👇
                   </p>
                   <div class="unordered_list_center" style="margin-bottom: 50px;">
-                    <a class="btn btn_primary" style="display: block;" href="signup.html">
+                    <a class="btn btn_primary" style="display: block;" href="/">
                       <span>
                         <small>Birinchi darsga ishtirosh e'tish!</small>
                         <small>Birinchi darsga ishtirosh e'tish!</small>
