--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <!-- Custom - CSS Include -->
     <link rel="stylesheet" type="text/css" href="demo_assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   </head>
 
@@ -299,14 +300,91 @@
         </section>
         <!-- Feature Section - End
         ================================================== -->
+        <section class="category_section section_space_lg">
+          <div class="container">
+            <div class="section_heading text-center">
+              <h2 class="heading_text mb-0">
+                Bizning tariflar
+              </h2>
+            </div>
 
+            <div class="row">
+              <div class="col col-lg-4 col-md-12 col-sm-12">
+                <div class="category_item" style="background-image: url('assets/images/shapes/dot_shape_3.png');">
+                  <a href="course_details.html" data-magnetic data-cursor="-opaque">
+                    <span class="item_icon">
+                      <img src="https://cdn-icons-png.flaticon.com/512/180/180700.png" alt="Icon Test Tube">
+                    </span>
+                    <strong class="item_title">Luna Lover</strong>
+                    <small class="item_counter">✓ Offline ingliz tili darslari</small>
+                    <small class="item_counter">✓ Uy vazifasini o'qituvchi yordami tomonidan tekshirilishi</small>
+                    <small class="item_counter">✓ Insholaringizni va nutqingizni baholanishi</small>
+                    <small class="item_counter">✓ Speaking Club'larda ishtirok etish</small>
+                    <small class="item_counter">✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish</small>
+                    <small class="item_counter">✓ Sayohatlar</small>
+                    <small class="item_counter">✓ Rexar Onlayn platformasida shaxsiy profil</small>
+                    <small class="item_counter">✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish</small>
+                  </a>
+                </div>
+              </div>
+
+              <div class="col col-lg-4 col-md-12 col-sm-12">
+                <div class="category_item" style="background-image: url('assets/images/shapes/dot_shape_3.png');">
+                  <a href="course_details.html" data-magnetic data-cursor="-opaque">
+                    <span class="item_icon">
+                      <img src="https://cdn-icons-png.flaticon.com/512/169/169367.png" alt="Icon Briefcase">
+                    </span>
+                    <strong class="item_title">Sun Shiner</strong>
+                    <small class="item_counter">✓ Offline ingliz tili darslari</small>
+                    <small class="item_counter">✓ Uy vazifasini o'qituvchi yordami tomonidan tekshirilishi</small>
+                    <small class="item_counter">✓ Barcha O'quv qirollari (Kitoblar, lug'at, daftar, ruchka)</small>
+                    <small class="item_counter">✓ Yordamchi o'qituvchi tomonidan qo'shimcha darslar</small>
+                    <small class="item_counter">✓ Insholaringizni va nutqingizni baholanishi</small>
+                    <small class="item_counter">✓ Kursni qulay va samarali bajarish uchun qushimcha materiallar olish</small>
+                    <small class="item_counter">✓ Kursni mavaffaqiyatli tugatganligi haqida sertifikat</small>
+                    <small class="item_counter">✓ Onlayn suhbatlar va qullab quvvatlash</small>
+                    <small class="item_counter">✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish</small>
+                    <small class="item_counter">✓ Sayohatlar</small>
+                    <small class="item_counter">✓ Rexar Onlayn platformasida shaxsiy profil</small>
+                    <small class="item_counter">✓ Speaking Club'larda ishtirok etish</small>
+                  </a>
+                </div>
+              </div>
+              <div class="col col-lg-4 col-md-12 col-sm-12">
+                <div class="category_item" style="background-image: url('assets/images/shapes/dot_shape_3.png');">
+                  <a href="course_details.html" data-magnetic data-cursor="-opaque">
+                    <span class="item_icon">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon_stylized.svg/2153px-Star_icon_stylized.svg.png" alt="Icon Briefcase">
+                    </span>
+                    <strong class="item_title">Star Reacher</strong>
+                    <small class="item_counter">✓ Offline ingliz tili darslari</small>
+                    <small class="item_counter">✓ Uy vazifasini o'qituvchi yordami tomonidan tekshirilishi</small>
+                    <small class="item_counter">✓ Barcha O'quv qirollari (Kitoblar, lug'at, daftar, ruchka)</small>
+                    <small class="item_counter">✓ Yordamchi o'qituvchi tomonidan qo'shimcha darslar</small>
+                    <small class="item_counter">✓ Insholaringizni va nutqingizni baholanishi</small>
+                    <small class="item_counter">✓ Kursni qulay va samarali bajarish uchun qushimcha materiallar olish</small>
+                    <small class="item_counter">✓ Kursni mavaffaqiyatli tugatganligi haqida sertifikat</small>
+                    <small class="item_counter">✓ Onlayn suhbatlar va qullab quvvatlash</small>
+                    <small class="item_counter">✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish</small>
+                    <small class="item_counter">✓ Tog'larga chiqish - butun jamoa va talabalar bilan birga</small>
+                    <small class="item_counter">✓ Online video darsliklari</small>
+                    <small class="item_counter">✓ Rexar Onlayn platformasida shaxsiy profil</small>
+                    <small class="item_counter">✓ Mock imtihonlarda bepul qatnashish</small>
+                    <small class="item_counter">✓ Dasturlash va Grafik Dizaynerlik darslari</small>
+                    <small class="item_counter">✓ Speaking Club'larda ishtirok etish</small>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <!-- Main Body - End
       ================================================== -->
 
       <!-- Footer Section - Start
       ================================================== -->
-      <footer class="site_footer text-center section_space_lg">
+      <footer class="text-center section_space_lg">
         <div class="container">
           <h3><span class="d-block">Veb-saytimizga tashrif buyurganingiz uchun tashakkur.</span></h3>
         </div>
