--- a/index.html
+++ b/index.html
@@ -146,64 +146,11 @@
 
               <div
                 class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
-                data-wow-delay=".3s"
-              >
-                <div class="feature_item">
-                  <h3 class="item_title">
-                    Insholaringizni va nutqingizni baholanishi
-                  </h3>
-                </div>
-              </div>
-
-              <div
-                class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
-                data-wow-delay=".4s"
-              >
-                <div class="feature_item">
-                  <h3 class="item_title">Speaking Club'larda ishtirok etish</h3>
-                </div>
-              </div>
-
-              <div
-                class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
-                data-wow-delay=".1s"
-              >
-                <div class="feature_item">
-                  <h3 class="item_title">
-                    Turli xil tadbirlarda bepul ishtirok etish va sovrinlar
-                    yutib olish
-                  </h3>
-                </div>
-              </div>
-
-              <div
-                class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
-                data-wow-delay=".2s"
-              >
-                <div class="feature_item">
-                  <h3 class="item_title">Sayohatlar</h3>
-                </div>
-              </div>
-
-              <div
-                class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
-                data-wow-delay=".3s"
-              >
-                <div class="feature_item">
-                  <h3 class="item_title">
-                    Rexar Onlayn platformasida shaxsiy profil
-                  </h3>
-                </div>
-              </div>
-
-              <div
-                class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
                 data-wow-delay=".4s"
               >
                 <div class="feature_item">
                   <h3 class="item_title">
-                    Turli xil tadbirlarda bepul ishtirok etish va sovrinlar
-                    yutib olish
+                    Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish
                   </h3>
                 </div>
               </div>
@@ -214,7 +161,7 @@
               >
                 <div class="feature_item">
                   <h3 class="item_title">
-                    Barcha O'quv qirollari (Kitoblar, lug'at, daftar, ruchka)
+                    Barcha O'quv qurollari (Kitoblar, lug'at, daftar, ruchka)
                   </h3>
                 </div>
               </div>
@@ -247,8 +194,7 @@
               >
                 <div class="feature_item">
                   <h3 class="item_title">
-                    Kursni qulay va samarali bajarish uchun qushimcha
-                    materiallar olish
+                    Kursni qulay va samarali bajarish uchun qo'shimcha materiallar olish
                   </h3>
                 </div>
               </div>
@@ -270,7 +216,7 @@
               >
                 <div class="feature_item">
                   <h3 class="item_title">
-                    Onlayn suhbatlar va qullab quvvatlash
+                    Onlayn suhbatlar va qo'llab quvvatlash
                   </h3>
                 </div>
               </div>
@@ -309,16 +255,7 @@
                 data-wow-delay=".2s"
               >
                 <div class="feature_item">
-                  <h3 class="item_title">Tog'larga chiqish - butun jamoa va</h3>
-                </div>
-              </div>
-
-              <div
-                class="col col-lg-3 col-md-6 col-sm-6 wow bounceInUp"
-                data-wow-delay=".3s"
-              >
-                <div class="feature_item">
-                  <h3 class="item_title">talabalar bilan birga</h3>
+                  <h3 class="item_title">Tog'larga chiqish - butun jamoa va talabalar bilan birga</h3>
                 </div>
               </div>
 
@@ -395,8 +332,7 @@
                       >✓ Offline ingliz tili darslari</small
                     >
                     <small class="item_counter"
-                      >✓ Uy vazifasini o'qituvchi yordami tomonidan
-                      tekshirilishi</small
+                      >✓ Uy vazifasini o'qituvchi yordami tomonidan tekshirilishi</small
                     >
                     <small class="item_counter"
                       >✓ Insholaringizni va nutqingizni baholanishi</small
@@ -474,34 +410,28 @@
                       >✓ Offline ingliz tili darslari</small
                     >
                     <small class="item_counter"
-                      >✓ Uy vazifasini o'qituvchi yordami tomonidan
-                      tekshirilishi</small
+                      >✓ Uy vazifasini o'qituvchi yordami tomonidan tekshirilishi</small
                     >
                     <small class="item_counter"
-                      >✓ Barcha O'quv qirollari (Kitoblar, lug'at, daftar,
-                      ruchka)</small
+                      >✓ Barcha O'quv qurollari (Kitoblar, lug'at, daftar, ruchka)</small
                     >
                     <small class="item_counter"
-                      >✓ Yordamchi o'qituvchi tomonidan qo'shimcha
-                      darslar</small
+                      >✓ Yordamchi o'qituvchi tomonidan qo'shimcha darslar</small
                     >
                     <small class="item_counter"
                       >✓ Insholaringizni va nutqingizni baholanishi</small
                     >
                     <small class="item_counter"
-                      >✓ Kursni qulay va samarali bajarish uchun qushimcha
-                      materiallar olish</small
+                      >✓ Kursni qulay va samarali bajarish uchun qo'shimcha materiallar olish</small
                     >
                     <small class="item_counter"
-                      >✓ Kursni mavaffaqiyatli tugatganligi haqida
-                      sertifikat</small
+                      >✓ Kursni mavaffaqiyatli tugatganligi haqida sertifikat</small
                     >
                     <small class="item_counter"
-                      >✓ Onlayn suhbatlar va qullab quvvatlash</small
+                      >✓ Onlayn suhbatlar va qo'llab quvvatlash</small
                     >
                     <small class="item_counter"
-                      >✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar
-                      yutib olish</small
+                      >✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish</small
                     >
                     <small class="item_counter">✓ Sayohatlar</small>
                     <small class="item_counter"
@@ -552,38 +482,31 @@
                       >✓ Offline ingliz tili darslari</small
                     >
                     <small class="item_counter"
-                      >✓ Uy vazifasini o'qituvchi yordami tomonidan
-                      tekshirilishi</small
+                      >✓ Uy vazifasini o'qituvchi yordami tomonidan tekshirilishi</small
                     >
                     <small class="item_counter"
-                      >✓ Barcha O'quv qirollari (Kitoblar, lug'at, daftar,
-                      ruchka)</small
+                      >✓ Barcha O'quv qurollari (Kitoblar, lug'at, daftar, ruchka)</small
                     >
                     <small class="item_counter"
-                      >✓ Yordamchi o'qituvchi tomonidan qo'shimcha
-                      darslar</small
+                      >✓ Yordamchi o'qituvchi tomonidan qo'shimcha darslar</small
                     >
                     <small class="item_counter"
                       >✓ Insholaringizni va nutqingizni baholanishi</small
                     >
                     <small class="item_counter"
-                      >✓ Kursni qulay va samarali bajarish uchun qushimcha
-                      materiallar olish</small
+                      >✓ Kursni qulay va samarali bajarish uchun qo'shimcha materiallar olish</small
                     >
                     <small class="item_counter"
-                      >✓ Kursni mavaffaqiyatli tugatganligi haqida
-                      sertifikat</small
+                      >✓ Kursni mavaffaqiyatli tugatganligi haqida sertifikat</small
                     >
                     <small class="item_counter"
-                      >✓ Onlayn suhbatlar va qullab quvvatlash</small
+                      >✓ Onlayn suhbatlar va qo'llab quvvatlash</small
                     >
                     <small class="item_counter"
-                      >✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar
-                      yutib olish</small
+                      >✓ Turli xil tadbirlarda bepul ishtirok etish va sovrinlar yutib olish</small
                     >
                     <small class="item_counter"
-                      >✓ Tog'larga chiqish - butun jamoa va talabalar bilan
-                      birga</small
+                      >✓ Tog'larga chiqish - butun jamoa va talabalar bilan birga</small
                     >
                     <small class="item_counter"
                       >✓ Online video darsliklari</small
