--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       ================================================== -->
       <header class="site_header text-center">
         <div class="site_logo">
-          <a class="site_link" href="index.html">
+          <a class="site_link" href="/">
             <img
               src="assets/images/logo/site_logo.png"
               width="200"
@@ -91,7 +91,7 @@
                     class="unordered_list_center"
                     style="margin-bottom: 50px"
                   >
-                    <a class="btn btn_primary" style="display: block" href="/">
+                    <a class="btn btn_primary" style="display: block" href="https://rexar.uz/forms/types">
                       <span>
                         <small>Birinchi darsga ishtirosh e'tish!</small>
                         <small>Birinchi darsga ishtirosh e'tish!</small>
@@ -316,7 +316,7 @@
                   "
                 >
                   <a
-                    href="course_details.html"
+                    href="#"
                     class="card-rad"
                     data-magnetic
                     data-cursor="-opaque"
@@ -389,7 +389,7 @@
                   "
                 >
                   <a
-                    href="course_details.html"
+                    href="#"
                     class="card-active"
                     style="
                       border-color: rgb(198, 234, 167);
@@ -466,7 +466,7 @@
                   "
                 >
                   <a
-                    href="course_details.html"
+                    href="#"
                     class="card-rad"
                     data-magnetic
                     data-cursor="-opaque"
@@ -542,6 +542,14 @@
               >Veb-saytimizga tashrif buyurganingiz uchun tashakkur.</span
             >
           </h3>
+          
+          <a class="unordered_list_center btn btn_primary" style="
+          display: inline-block;width: 300px;" href="https://rexar.uz/forms/types">
+            <span>
+              <small>Birinchi darsga ishtirosh e'tish!</small>
+              <small>Birinchi darsga ishtirosh e'tish!</small>
+            </span>
+          </a>
         </div>
       </footer>
       <!-- Footer Section - End
